# banner-maker

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  banner_commands.json  banner_maker.py  demo_defaults.json  parameters.json  pyproject.toml  requirements.txt  setup.py
.claude/: session_memory.md  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
banner/: background.py  cpu_surface.py  icon.py  overlays.py  pipeline.py  shapes.py  text.py  textures.py
banner/effects/: __init__.py  _utils.py  bloom.py  chromatic_aberration.py  clarendon.py  cool.py  cyberpunk.py  dramatic.py  gingham.py  glow.py  juno.py  lark.py  lens_flare.py  matte.py  monochrome.py  reyes.py  soft.py  valencia.py  vibrant.py  vignette.py  vintage.py  warm.py
banner/patterns/: __init__.py  _utils.py  ascii_grid.py  dots.py  hearts.py  lines.py  sine.py  squares.py  stars.py  triangles.py  wave.py  zigzag.py
banner/shapes/: __init__.py  _utils.py  blob.py  circle.py  diagonal_bar.py  ellipse.py  polygon.py  rectangle.py  triangle.py  wave.py
banner/textures/: __init__.py  _utils.py  canvas.py  concrete.py  corduroy.py  denim.py  grain.py  leather.py  (+3 more)
core/: cli_parser.py  color_utils.py  compact_parser.py  config_utils.py  constants.py  font_utils.py  geometry_utils.py  image_utils.py  layer_utils.py  parameter_definitions.py  preset.py  text_utils.py
demo/: demo.py  demo_set.py
docs/: PRESETS.md  PRESET_GALLERY.md
fonts/: LICENSE-DejaVu.txt  OFL-Inter.txt  __init__.py
(+43 files in other folders)
